tests/paczka1/small_fuzzy/53101529.err
Error in line 1: 2SZmPIFQ S660 8,1
Error in line 4: A198 A23 40,5
